--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,15 +2,19 @@
 name: CD - Deploy
 
 on:
-  push:
+  push:   # run on ALL pushes
+    branches:
+      - "**"   # all branches
     tags:
-      - "v*.*.*"   # deploy only when a version tag is created
+      - "*"    # all tags
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -18,7 +22,24 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Build and push Docker image
-        run: |
-          docker build -t myuser/calculator:${GITHUB_REF_NAME} .
-          docker push myuser/calculator:${GITHUB_REF_NAME}
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/calculator:${{ github.ref_name }}
+            ${{ secrets.DOCKER_USERNAME }}/calculator:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
