--- a/.github/workflows/ct.yml
+++ b/.github/workflows/ct.yml
@@ -2,10 +2,11 @@
 name: CT - Continuous Testing
 
 on:
-  workflow_run:
-    workflows: ["CD - Deploy"]
-    types:
-      - completed
+  push:   # run on ALL pushes
+    branches:
+      - "**"   # all branches
+    tags:
+      - "*"    # all tags
 
 jobs:
   integration-tests:
@@ -14,7 +15,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install pytest requests
+
       - name: Run integration tests
         run: |
-          pip install pytest requests
           pytest --maxfail=1 --disable-warnings -q
